Clean up old data

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,2 @@
-url: "https://oskarizu.net"
-baseurl: ""
-title: "Més enllà del 2048?"
-email: "oscar@oskarizu.net"
+url: "https://2048enlla.cat"
 github: [metadata]
